--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn==20.1.0
 altgraph==0.17.4
 attrs==23.2.0
 blinker==1.8.2
@@ -48,5 +49,4 @@ urllib3==2.2.1
 websockets==13.1
 Werkzeug==3.0.4
 wsproto==1.2.0
-yt-dlp==2024.9.27  # Burada da sadece bir sürüm bırakmalısınız
-gunicorn==20.1.0
+yt-dlp==2024.9.27
