--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+Flask==2.0.3
 gunicorn==20.1.0
+yt-dlp==2024.9.27
+Werkzeug==2.0.3
 altgraph==0.17.4
 attrs==23.2.0
 blinker==1.8.2
@@ -8,7 +11,6 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-Flask==2.0.3  # Burada sadece bir sürüm bırakmalısınız
 h11==0.14.0
 idna==3.7
 itsdangerous==2.2.0
@@ -47,6 +49,4 @@ typing_extensions==4.11.0
 undetected-chromedriver==3.5.5
 urllib3==2.2.1
 websockets==13.1
-Werkzeug==3.0.4
 wsproto==1.2.0
-yt-dlp==2024.9.27
